--- a/src/components/ui/Button/button.scss
+++ b/src/components/ui/Button/button.scss
@@ -122,6 +122,10 @@
   &[data-variant='text'] {
     --size: inherit;
 
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
     padding-inline: 0;
     border: none;
     background-color: transparent;
