--- a/src/components/ui/Table/table.scss
+++ b/src/components/ui/Table/table.scss
@@ -8,6 +8,10 @@
   &:not(:last-child) .Layer__UI__Table-Column {
     border-bottom: 1px solid var(--color-base-300);
   }
+
+  > tr {
+    height: inherit;
+  }
 }
 
 .Layer__UI__Table-Row {
@@ -20,6 +24,11 @@
 
 .Layer__UI__Table-Column {
   box-sizing: border-box;
+
+  display: flex;
+  align-items: center;
+  height: inherit;
+
   padding: var(--spacing-xs) var(--spacing-sm);
   font-size: var(--text-sm);
   font-weight: var(--font-weight-normal);
@@ -43,6 +52,12 @@
 }
 
 .Layer__UI__Table-Cell {
+  box-sizing: border-box;
+
+  display: flex;
+  align-items: center;
+  height: inherit;
+
   padding: var(--spacing-xs) var(--spacing-sm);
   font-size: var(--text-md);
   font-weight: var(--font-weight-normal);
